# oop_22-23

./: .gitignore
Task1/: .gitignore  BigInt.cpp  BigInt.h  tests.cpp  Основы ООП  - Задача 1.txt
Task2/: .gitignore  CMakeLists.txt  Field.cpp  Field.h  InputFileParser.cpp  InputFileParser.h  Interface.cpp  Interface.h  LifeConway.cpp  LifeConway.h  Printer.cpp  Printer.h  ProgramContext.h  in.txt  main.cpp  tests.cpp
Task3/: CMakeLists.txt  Converter.cpp  Factory.cpp  Factory.h  Printer.cpp  Printer.h  ProgramContext.cpp  Reader.cpp  Reader.h  SoundProcessor.cpp  main.cpp
Task4/: CSVParser.h  TuplePrinter.h  main.cpp
c++/Task1/: BigInt.cpp
c++/Task2/: Field.cpp  InputFileParser.cpp  LifeConway.h  ProgramContext.cpp  main.cpp
c++/Task3/: Converter.cpp  Converter.h  Printer.cpp  Printer.h  ProgramContext.h  Reader.cpp  Reader.h  SoundProcessor.cpp  SoundProcessor.h  WaveHeadParser.cpp  WaveHeadParser.h  main.cpp
c++/Task4/: CMakeLists.txt  CSVParser.h  TuplePrinter.h  main.cpp
java/Task1/: pom.xml  readme.txt
java/Task1/src/: Main.java
java/Task1/src/calculator/: Calculator.java
java/Task1/src/calculator/context/: ProgramContext.java
java/Task1/src/calculator/exception/: CalculatorException.java
java/Task1/src/calculator/exception/context/: PeekException.java
java/Task1/src/calculator/exception/operation/: ArgsFormatException.java  ExecuteException.java  VariableException.java
java/Task1/src/calculator/factory/: FactoryCalculator.java  FactoryOperations.java
java/Task1/src/calculator/operations/: Define.java  Operation.java  OperationIds.java  Pop.java  Print.java
java/Task1/src/calculator/stackcalculator/: StackCalculatorFromFile.java  StackCalculatorFromTerminal.java
java/Task1/src/calculator/utils/: Command.java  CommandParser.java  OperationUtils.java  StringUtils.java
java/Task1/src/main/java/: Main.java
java/Task1/src/main/resources/: configuration.txt  log4j2.xml
java/Task1/src/test/java/calculatorTests/: ContextTests.java  (+3 more)
java/Task2/src/main/java/: Main.java
java/Task3/: pom.xml
java/Task3/src/main/java/: Main.java
java/Task3/src/main/resources/: configuration.txt  log4j2.xml
(+102 files in other folders)
